--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
 <li>
 <code>description</code> is a short description about what's being configured (eg pfs-ecdhe)</li>
 </ul><h3>
+<a name="examples" class="anchor" href="#examples"><span class="octicon octicon-link"></span></a>Examples</h3>
+
+<p>Here are links to a couple of the examples:</p>
+
+<ul>
+<li><a href="https://github.com/properssl/nginx-pfs">https://github.com/properssl/nginx-pfs</a></li>
+<li><a href="https://github.com/properssl/java-jdbc-postgresql">https://github.com/properssl/java-jdbc-postgresql</a></li>
+</ul><h3>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h3>
 
 <p>Unless explicitly specified otherwise, all Proper SSL code is release under the MIT License.</p>
