Added link to java-jdbc-mariadb example

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 <ul>
 <li><a href="https://github.com/properssl/nginx-pfs">https://github.com/properssl/nginx-pfs</a></li>
 <li><a href="https://github.com/properssl/java-jdbc-postgresql">https://github.com/properssl/java-jdbc-postgresql</a></li>
+<li><a href="https://github.com/properssl/java-jdbc-mariadb">https://github.com/properssl/java-jdbc-mariadb</a></li>
 </ul><h3>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h3>
 
