Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </ul><h3>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h3>
 
-<p>Unless explicitly specified otherwise, all Proper SSL code is released under the <a href="LICENSE">MIT License</a>.</p>
+<p>Unless explicitly specified otherwise, all Proper SSL code is released under the <a href="http://opensource.org/licenses/MIT">MIT License</a>.</p>
 
 <h3>
 <a name="who-created-proper-ssl" class="anchor" href="#who-created-proper-ssl"><span class="octicon octicon-link"></span></a>Who Created Proper SSL?</h3>
