--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
 <li><a href="https://github.com/properssl/java-jdbc-postgresql">PostgreSQL JDBC with self-signed certificate validation</a></li>
 <li><a href="https://github.com/properssl/java-jdbc-mariadb">MariaDB JDBC with self-signed certificate validation</a></li>
 </ul><h3>
+<a name="contributing" class="anchor" href="#contributing"><span class="octicon octicon-link"></span></a>Contributing</h3>
+
+<p>Contributions of new examples are always welcome. To suggest new examples, please <a href="https://github.com/properssl/properssl.github.io/issues/new">submit an issue</a>.</p>
+
+<h3>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h3>
 
 <p>Unless explicitly specified otherwise, all Proper SSL code is released under the <a href="http://opensource.org/licenses/MIT">MIT License</a>.</p>
