Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 
 <p>Proper SSL is a series of best practices for establishing SSL connections between clients and servers.</p>
 
+<p>For an overview of SSL itself and the inspiration that that lead to the creation of this site read <a href="http://blog.jackdb.com/post/54435480893/proper-ssl-a-repository-of-ssl-best-practices">this post</a>.</p>
+
 <h3>
 <a name="about" class="anchor" href="#about"><span class="octicon octicon-link"></span></a>About</h3>
 
@@ -104,7 +106,7 @@
 </ul><h3>
 <a name="contributing" class="anchor" href="#contributing"><span class="octicon octicon-link"></span></a>Contributing</h3>
 
-<p>Contributions of new examples are always welcome. To suggest new examples, please <a href="https://github.com/properssl/properssl.github.io/issues/new">submit an issue</a>.</p>
+<p>Contributions of new examples are always welcome. To suggest new examples, please <a href="https://github.com/properssl/properssl.github.io/issues/new">submit an issue</a>. If you've created a working example publish it on GitHub and we'll fork it.</p>
 
 <h3>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h3>
@@ -115,6 +117,8 @@
 <a name="who-created-proper-ssl" class="anchor" href="#who-created-proper-ssl"><span class="octicon octicon-link"></span></a>Who Created Proper SSL?</h3>
 
 <p>Proper SSL is brought to you by <a href="http://www.jackdb.com/home.html?utm_source=properssl">JackDB</a>.</p>
+
+<hr>
       </section>
 
       <footer>
